Make element focus upon command completion less brittle
* Add null checks to call to element.Focus()
* Add command parameter to Add Personnel button in EditKeyBunchControl

Fixes #1

--- a/GUI/EditControls/EditKeyBunchesControl.xaml
+++ b/GUI/EditControls/EditKeyBunchesControl.xaml
@@ -205,7 +205,7 @@
                                 <Label Content="Contact number" VerticalAlignment="Center"/>
                                 <TextBox Text="{Binding PersonToAdd.ContactNumber, UpdateSourceTrigger=PropertyChanged}" TabIndex="7"/>
                             </DockPanel>
-                            <Button Style="{DynamicResource HighlightButton}" Command="{Binding CmdAddPerson}">
+                            <Button Style="{DynamicResource HighlightButton}" Command="{Binding CmdAddPerson}" CommandParameter="{Binding ElementName=NRIC, Mode=OneWay}">
                                 Add
                             </Button>
                         </StackPanel>
